src/recipe/parser/snapshots/rattler_build__recipe__parser__glob_vec__tests__parsing_all_or_globvec.snap
---
source: src/recipe/parser/glob_vec.rs
expression: "&as_yaml"
---
globs:
- foo{,/**}
- bar{,/**}
- baz/**/qux{,/**}
