src/recipe/parser/snapshots/rattler_build__recipe__parser__glob_vec__tests__parsing_glob_checker_vec.snap
---
source: src/recipe/parser/glob_vec.rs
expression: "&yaml"
---
exists:
- foo
- bar
not_exists:
- baz/**/qux
