src/recipe/parser/snapshots/rattler_build__recipe__parser__glob_vec__tests__parsing_globvec-2.snap
---
source: src/recipe/parser/glob_vec.rs
expression: "&as_yaml"
---
include:
- foo/**
- bar
- baz/**/qux
exclude:
- foo/bar
- bar/*.txt
