src/recipe/parser/snapshots/rattler_build__recipe__parser__glob_vec__tests__parsing_globvec_fail.snap
---
source: src/recipe/parser/glob_vec.rs
expression: err
---
  × Parsing: failed to parse glob: error parsing glob 'foo/{bla': unclosed
  │ alternate group; missing '}' (maybe escape '{' with '[{]'?)
   ╭─[2:11]
 1 │ globs:
 2 │         - foo/{bla
   ·           ────┬───
   ·               ╰── here
 3 │         
   ╰────

